--- a/about.qmd
+++ b/about.qmd
@@ -1,13 +1,23 @@
 ---
 title: "About"
+format: 
+  html:
+    fig-width: 8
+    fig-height: 6
 ---
 
 ![](Images/photo.jpg){fig-align="left"}
 
-__Reporting Bat Survey Data__ compliments the _data science_ chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition. Unlike the guidelines it has the R code that make the analysis; which can be copied an used.
+__Reporting Bat Survey Data__ compliments the _data science_ chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition. Unlike the guidelines it has the R code making the analysis; which can be copied and used.
 
-These pages were written by Steve Markham, Director and Data Scientist at _Marquis & Lord Ltd._ over my career I have developed and applied software applications to water management and more recently, the last 15 years, applied _data science_ to a wide range of projects using the R software environment. Since 1997 I have held a Natural England Roost Visitors Licence and have undertaken numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust.  I have been on the editorial board of all the editions of the Bat Survey Guidelines were I have encouraged ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats! 
+These web pages were written by Steve Markham, Director and Data Scientist at _Marquis & Lord Ltd._ Over my 39 year career I have developed and applied software applications to water management and more recently, the last 15 years, applied _data science_ to a wide range of projects using the R software environment. Since 1997 I have held a Natural England Roost Visitors Licence, undertaking numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust from 2012 to 2021.  I have been on the editorial board of all the editions of the Bat Survey Guidelines[^1], encouraging ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats! 
 
-This web site also introduces the `iBats` package. `iBats` is a package with a range of functions that hopefully enhance and smooth the _data science_ of bat data collected from bat detectors post sound identification.  
+This web site also introduces the `iBats` package[^2]. `iBats` is a package with a range of functions that hopefully enhances and smooths the _data science_ of bat data collected from bat detectors post sound identification.  
 
-The `iBats` name is borrowed from Prof Kate Jones and follows in the citizen science spirit of the original __iBats__.
+<!-- The `iBats` name is borrowed from Prof Kate Jones and follows in the citizen science spirit of the original __iBats__. -->
+
+Finally a special thanks to the bat workers that have put with my incessant data talk, especially: Amanda, Anna, Kevin, Liat, Phil, Richard and, Suzy.
+
+[^1]: the current version of the Bat Survey Guidelines can be found here:   <https://www.bats.org.uk/resources/guidance-for-professionals/bat-surveys-for-professional-ecologists-good-practice-guidelines-3rd-edition>
+
+[^2]: the `iBats` package is held on GitHub: <https://github.com/Nattereri/iBats>
