--- a/dynamic.qmd
+++ b/dynamic.qmd
@@ -12,7 +12,7 @@ format:
 ### Lydford School Transect
 
 ```{r}
-#| include=FALSE
+#| include: false
 
 library(tidyverse)
 library(leaflet)
@@ -76,11 +76,6 @@ ColourVector <- ColourVector %>%
 
 ```
 
-@fig-lydfordtransect shows Lydford Primary School's bat walk observations from Wednesday evening 18^th^ September 2019.  The walk, between the School and the River Lyd, on the western edge of Dartmoor, started at sunset 6:27pm and continued for just over an hour.  The observations were made with a [Batlogger M](https://www.batlogger.com/en/products/batlogger_m/) bat detector that records the sound of the bat as it passes together with the time and postion; using a built-in Global Positioning System (GPS).  These sounds where then analysed with software designed to help determine which species made the echolocation; [BatExplorer](https://www.batlogger.com/en/products/batexplorer/) was the software used.   
-
-
-@fig-lydfordtransect is an interactive map; hovering the mouse over the coloured point will show the species and the time, in minutes, after sunset the bat was observed.
-
 ```{r}
 #| label: fig-lydfordtransect
 #| fig-cap: "Bat Observations From Lydford School's Bat Walk"
@@ -105,5 +100,10 @@ Lydford %>%
 
 ```
 
+
+@fig-lydfordtransect shows Lydford Primary School's bat walk observations from Wednesday evening 18^th^ September 2019.  The walk, between the School and the River Lyd, on the western edge of Dartmoor, started at sunset 6:27pm and continued for just over an hour.  The observations were made with a [Batlogger M](https://www.batlogger.com/en/products/batlogger_m/) bat detector that records the sound of the bat as it passes together with the time and postion; using a built-in Global Positioning System (GPS).  These sounds where then analysed with software designed to help determine which species made the echolocation; [BatExplorer](https://www.batlogger.com/en/products/batexplorer/) was the software used.   
+
+
+@fig-lydfordtransect is an interactive map; hovering the mouse over the coloured point will show the species and the time, in minutes, after sunset the bat was observed.
 
 The data shown in  @fig-lydfordtransect, `Lydford` is available from the `iBats` package.
